better dark mode fix

--- a/apps/web/src/styles.css
+++ b/apps/web/src/styles.css
@@ -196,7 +196,4 @@ ul {
   @apply border border-gray-100 shadow-none dark:border-gray-700;
 }
 
-.input-black {
-  color: black;
-}
 
